# logger

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  test.sh
include/logger/: channel.hpp  common.hpp  log.hpp  logger.hpp  sinks.hpp
include/logger/sinks/: consoleSink.hpp  fileSink.hpp  sink.hpp
include/logger/utils/: queue.hpp
src/core/: CMakeLists.txt  binaryFileSink.cpp  commons.cpp  consoleSink.cpp  fileSink.cpp  log.cpp  logger.cpp  networkSink.cpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.cpp
